🧑‍💻 .jsonファイルをスペルチェックから除外にする

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
     "editor.formatOnSave": true,
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-    }
+    },
+    // Specify paths/files to ignore.
+    "cSpell.ignorePaths": [
+        "*.json",
+    ],
+    "cSpell.words": [
+        "apos"
+    ]
 }
