🧑‍💻 jsxファイルのVSCode設定を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
     },
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     // Specify paths/files to ignore.
     "cSpell.ignorePaths": [
         "*.json",
